less/app.less
/* ... */
.fixed-controls {
	background: #fff;
	position: fixed;
	padding-bottom: 5rem;
	left: 0;
	right: 0;
	bottom: 0;
	top: auto;
	height: 9rem;
	.transition(height 0.3s ease-in-out);
	.transform-origin(bottom);

	&.expand {
		height: 100%;
	}
}

.player {
	position: relative;
	height: 6rem;
	line-height: 6rem;
	background: #333;

	.controls {
		margin-right: @grid-gutter-width / 2;
		position: absolute;
		left: 0;
		right: auto;
		top: 2rem;
		height: 4rem;
		line-height: 4rem;
		vertical-align: middle;
		z-index: @z-player-controls;

		@media screen and (max-width: @screen-xs-max){
			text-align: center;
			margin-right: 0;
			top: 1.5rem;
			right: 0;
			height: 3rem;
			line-height: 2rem;
		}
	}

	.skip,
	.back {
		&.disabled {
			color: @white;
			opacity: 0.1;
			cursor: not-allowed;
		}
	}

	.artist,
	.song-title {
		position: relative;
		z-index: @z-player-info;
		margin-left: @grid-gutter-width / 2;

		.hidden-xs;
	}

	.song-info {
		left: 10.5rem;
		top: 2.4rem;
		position: absolute;
		z-index: 500;

		.is-cast-receiver & {
			display: none;
		}
	}

	.artist {
		font-size: @font-size-base;
		letter-spacing: 0.1rem;
		margin-bottom: 0.25rem;
	}

	.song-title {
		font-size: @font-size-small;
		color: @music-medium;
		text-indent: 0;
	}

	.jp-progress-container {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		z-index: 500;
		height: 2rem;

		.current-time,
		.duration {
			position: absolute;
			top: 0;
			line-height: 2rem;
			vertical-align: middle;
			font-size: @font-size-base * 0.785;
			color: #999;

			.is-cast-receiver & {
				z-index: 600;
			}
		}

		.current-time {
			left: 0.5rem;
		}

		.duration {
			right: 0.5rem;
		}
	}

	.player-progress {
		height: 0.25rem;
		left: 3.7rem;
		top: @line-height-computed / 2;
		right: 3.7rem;
		background: #444;
		z-index: 500;
		.vertical-center;
		position: absolute;

		.is-cast-receiver & {
			left: 0;
			right: 0;
			top: 0;
			bottom: 0;
			height: 6rem;
			position: relative;
			transform: translateY(0);
			-webkit-transform:translateY(0);
		}

		.bar {
			position: absolute;
			bottom: 0;
			top: 0;
			left: 0;
			right: 0;
			background-color: #666;
			z-index: 500;
		}
	}

	.playback-info {
		left: 11.5rem;
		right: 0.5rem;
		top: 3.5rem;
		bottom: 0;
		text-align: right;
		line-height: 1.4;
		position: absolute;

		p {
			line-height: 1.5;
			margin-bottom: 0;
		}

		.is-cast-receiver & {
			z-index: 600;
		}

		@media screen and (max-width: @screen-xs-max){
			left: 0.5rem;
			right: 0.5rem;
			top: auto;
			bottom: 0;
			text-align: left;
			z-index: 500;

			p {
				position: absolute;
				bottom: 0;
			}

			.skips {
				right: 0;
			}

			.playlist-progress,
			.favorites-count {
				left: 0;
			}
		}

		@media screen and (min-width: @screen-sm){
			position: absolute;
		}
	}

	.skips,
	.favorites-count,
	.playlist-progress {
		color: #999;
		text-transform: uppercase;
		font-size: @font-size-base * 0.785;
		padding: 0;
		line-height: 1.2;

		@media screen and (max-width: @screen-xs-max){
			font-size: @font-size-base * 0.715;
			margin-bottom: 0;
			line-height: 1;
		}
	}

	.skips {
		@media screen and (min-width: @screen-sm) {
			 .no-touch & {
			 	display: none;
			 }  

			 position: absolute;
			 left: 0;
			 bottom: 0;
			 right: auto;
			 text-align: left;
		}
	}

	.favorites-count {
		display: none;
	}

	.playing-favorites & {
		.playlist-progress {
			display: none;
		}

		.favorites-count {
			display: block;
		}
	}

	.full-list,
	.share,
	.play-toggle {
		.vertical-center;
		position: absolute;
		z-index: 700;

		a {
			color: @music-red-light;
			font-size: @font-size-base * 1.5;
		}
	}

	.full-list {
		left: 0.5rem;
	}

	.share {
		left: 4.5rem;

		a {
			cursor: pointer;
		}
	}

	.play-toggle {
		right: 0.5rem;

	    .label {
	    	font-size: @font-size-base * 0.785;
	    	line-height: @font-size-base * 1.5;
	    	vertical-align: middle;
	    	text-transform: uppercase;


		    @media screen and (max-width: @screen-xs-max){
		    	font-size: @font-size-base * 0.715;
		    }
	    }

	    .play-all,
	    .play-favorites {
	    	&:hover {
	    		text-decoration: none;
	    	}
	    }

	    .play-all {
	        display: none;
	    }

	    .play-favorites.disabled,
	    .play-favorites.disabled.label {
	    	color: #fff;
	    	opacity: 0.1;
	    }

    	.icon-heart {
	    	display: inline-block;
	    	width: 1.5rem;
	    }

	    @media screen and (min-width: @screen-sm){
			top: 3rem;

		    .icon-heart {
		    	width: 1rem;
		    }

		    .icon-heart,
		    .fa-music {
		    	font-size: 1rem;
		    	line-height: 1.5rem;
		    	vertical-align: middle;
		    }
	    }
	}

	.tooltip.fade.in {
		z-index: 700;
		width: auto;
		opacity: 1;
	}

	.tooltip .tooltip-arrow {
		bottom: 1px;
		border-top-color: @white;
	}

	.tooltip .tooltip-inner {
		min-width: 10rem;
		border-radius: 0;
		color: @text-color;
		background: @white;
	}
}

.player-button,
.player-button:focus,
.player-button:visited,
.player-button:hover {
	display: inline-block;
	height: 4rem;
	width: 3.2rem;
	background: @gray-dark;
	color: @music-red-light;
	line-height: 3rem;
	text-align: center;
	font-size: @font-size-base * 3;
	vertical-align: middle;

	.icon-forward,
	.icon-backward,
	.icon-play,
	.icon-pause,
	.icon-play:before,
	.icon-pause:before,
	.icon-forward:before,
	.icon-backward:before {
		margin: 0;
	}

	&.back,
	&.skip {
		width: 2rem;
		font-size: @font-size-base * 2;
	}


	&.back {
		text-align: right;
	}

	&.skip {
		text-align: left;
	}

	.no-touch & {
		&:hover {
			color: #fff;
			// background: lighten(@music-red-light, 10%);
			text-decoration: none;
		}
	}

	.touch & {
		&:active {
			color: #fff;
			// background: lighten(@music-red-light, 10%);
			text-decoration: none;
		}
	}

	@media screen and (max-width: @screen-xs-max){
		height: 3rem;
		line-height: 3rem;
	}
}

.current-song {
	position: relative;
}

